@@ -370,6 +370,26 @@ static VALUE previous_sibling(VALUE self)
   return Nokogiri_wrap_xml_node(Qnil, sibling);
 }
 
+/*
+ * call-seq:
+ *  next_element
+ *
+ * Returns the next Nokogiri::XML::Element type sibling node.
+ */
+static VALUE next_element(VALUE self)
+{
+  xmlNodePtr node, sibling;
+  Data_Get_Struct(self, xmlNode, node);
+
+  sibling = node->next;
+  if(!sibling) return Qnil;
+
+  while(sibling && sibling->type != XML_ELEMENT_NODE)
+    sibling = sibling->next;
+
+  return Nokogiri_wrap_xml_node(Qnil, sibling) ;
+}
+
 /* :nodoc: */
 static VALUE replace(VALUE self, VALUE _new_node)
 {
@@ -1023,6 +1043,7 @@ void init_xml_node()
   rb_define_method(klass, "children", children, 0);
   rb_define_method(klass, "next_sibling", next_sibling, 0);
   rb_define_method(klass, "previous_sibling", previous_sibling, 0);
+  rb_define_method(klass, "next_element", next_element, 0);
   rb_define_method(klass, "node_type", node_type, 0);
   rb_define_method(klass, "content", get_content, 0);
   rb_define_method(klass, "path", path, 0);
